[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrow = "57.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
parquet = { version = "57.2", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
alloy = { version = "1.4", features = ["full", "rpc-types-trace"] }
indicatif = "0.18"
reqwest = { version = "0.13", features = ["json", "gzip"] }

[profile.release]
lto = true
codegen-units = 1
